--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -31,6 +31,18 @@
             background-color: #003865;
         }
 
+        .bg-uog-light {
+            background-color: #013e70;
+        }
+
+        .bg-blue {
+            background-color: #005398;
+        }
+
+        .text-white {
+            color: #E1E9EF; /* Bluish white. Use for text */
+        }
+
         /* body { */
             /* set minimum content width when resizing */
             /* min-width: 1000px;
@@ -50,10 +62,50 @@
             padding-bottom: 100px;
         }
 
-        .logo {
-            max-height: 32px;
+        @media (max-width: 1000px) {
+            body {
+                padding-top: 80px;
+            }
         }
 
+        /* navbar */
+
+        .navbar .btn {
+            color: #E1E9EF;
+            font-size: 1rem;
+        }
+
+        .navbar .btn {
+            background-color: #002747 !important;
+        }
+
+        .navbar input {
+            background-color: #E1E9EF;
+        }
+
+        /* .navbar-nav > li > a{ padding: 0px 15px !important;} */
+
+        .navbar .navbar-brand {
+            padding-top: 0px !important;
+            padding-bottom: 0px !important;
+        }
+
+        .navbar .form-inline .btn {
+            padding-top: 0px !important;
+        }
+
+        .navbar .form-control {
+            padding: 1rem 1rem;
+            border-width: 0;
+        }
+
+        .logo {
+            max-height: 32px;
+            height: 5;
+            width: 5;
+        }
+
+        /* footer */
         .footerNav {
             color: #577492;
         }
@@ -78,53 +130,6 @@
             line-height: 2em;
         }
 
-        hr {
-            width: 80%;
-        }
-
-        .navbar .btn {
-            color: #E1E9EF;
-            font-size: 1rem;
-        }
-
-        .navbar .btn {
-            background-color: #002747 !important;
-        }
-
-        .navbar input {
-            background-color: #E1E9EF;
-        }
-
-        .bg-blue {
-            background-color: #005398;
-        }
-
-        .text-white {
-            color: #E1E9EF; /* Bluish white. Use for text */
-        }
-
-        .logo {
-            height: 5;
-            width: 5;
-            /* max-height: 60px; */
-        }
-
-        .navbar .navbar-brand {
-            padding-top: 0 !important;
-            padding-bottom: 0 !important;
-        }
-
-        @media (max-width: 1000px) {
-            body {
-                padding-top: 80px;
-            }
-        }
-
-        .navbar .form-control {
-            padding: 1rem 1rem;
-            border-width: 0;
-        }
-
         /* sidebar */
         .wrapper {
             display: flex;
@@ -144,43 +149,51 @@
             background:#003865;
             color: #fefefe;
 
-            transition: all 0.3s;
-        }
-
-        #sidebar ul.components {
-            padding: 20px 0;
-        }
-
-        ul ul a {
-            font-size: 0.9em !important;
-            padding-left: 30px !important;
+            /* transition: all 0.2s; */
         }
 
         #sidebar.active {
-            min-width: 75px;
-            max-width: 75px;
-            min-height: 100vh;
+            width: 70px;
+            height: 100vh;
+            text-align:center;
+        }
+
+        #sidebar ul {
+            padding: 20px 0;
         }
 
         #sidebar ul li a {
             text-align: left;
+            font-size: 0.85em;
+        }
+
+        #sidebar ul li a i {
+            vertical-align: middle;
+            margin-right: 0;
+            font-size: 1.8em;
+            margin-bottom:5px;
         }
 
         #sidebar.active ul li a {
-            padding: 20px 10px;
-            text-align: center;
             font-size: 0.85em;
         }
 
         #sidebar.active ul li a i {
-            margin-right:  0;
-            display: block;
+            margin-right: 0;
             font-size: 1.8em;
             margin-bottom: 5px;
         }
 
-        #sidebar.active ul ul a {
-            padding: 10px !important;
+        #sidebar p {
+            display: inline;
+        }
+
+        #sidebar.active p {
+            display: none;
+        }
+
+        #sidebar .nav-link {
+            color: #E1E9EF;
         }
 
         /* body block */
@@ -188,16 +201,16 @@
             width: calc(100% - 250px);
             position: absolute;
             min-height: 100vh;
-            transition: all 0.3s;
+            transition: all 0.2s;
             top: 60;
             right: 0;
         }
 
         #bodyBlock.active {
-            width: calc(100% - 75px);
+            width: calc(100% - 70px);
             position: absolute;
             min-height: 100vh;
-            transition: all 0.3s;
+            transition: all 0.2s;
             top: 60;
             right: 0;
         }
@@ -234,7 +247,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-uog shadow">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-uog">
             <!-- todo: brand redirects to index 
                            edit svg to include School of Chemistry Database -->
             <div class="d-flex flex-grow-1">
@@ -311,58 +324,50 @@
             </div>
         </nav>
     </header>
-    <!-- <div class="row">
-        <div class="col-md-1 d-none d-md-block bg-uog sidebar">
-            <div class="sidebar-sticky">
-
-            </div>
-        </div> -->
-        <!-- <main role="main" id="bodyContent" class="col-md-9 ml-sm-auto col-lg-11 px-4"> -->
         <div class="wrapper">
             <!-- sidebar -->
             <nav id="sidebar">
-                <ul class="list-unstyled components">
+                <ul class="nav components flex-column">
                     <!-- home -->
-                    <li>
-                        <a href="#">
-                            <i class="fas fa-home"></i>
-                            Home
+                    <li class="px-1 py-2 nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa-fw fas fa-home"></i>
+                            <p class="pl-2">Home</p>
                         </a>
                     </li>
-
                     <!-- degree -->
-                    <li>
-                        <a href="#">
-                            <i class="fas fa-graduation-cap"></i>
-                            Degree
+                    <li class="px-1 py-2 nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa-fw fas fa-graduation-cap"></i>
+                            <p class="pl-2">Degree</p>
                         </a>
                     </li>
                     <!-- students -->
-                    <li>
-                        <a href="#">
-                            <i class="fas fa-book-reader"></i>
-                            Students
+                    <li class="px-1 py-2 nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa-fw fas fa-book-reader"></i>
+                            <p class="pl-2">Students</p>
                         </a>
                     </li>
                     <!-- manage -->
-                    <li>
-                        <a href="#">
-                            <i class="fas fa-cogs"></i>
-                            Manage
+                    <li class="px-1 py-2 nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa-fw fas fa-cogs"></i>
+                            <p class="pl-2">Manage</p>
                         </a>
                     </li>
                     <!-- upload -->
-                    <li>
-                        <a href="#">
-                            <i class="fas fa-upload"></i>
-                            Upload
+                    <li class="px-1 py-2 nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa-fw fas fa-upload"></i>
+                            <p class="pl-2">Upload</p>
                         </a>
                     </li>
                     <!-- sign out -->
-                    <li>
-                        <a href="#">
-                            <i class="fas fa-sign-out-alt"></i>
-                            Sign out
+                    <li class="px-1 py-2 nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa-fw fas fa-sign-out-alt"></i>
+                            <p class="pl-2">Sign out</p>
                         </a>
                     </li>
                 </ul>
