--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -104,7 +104,7 @@
 
 <!-- responsiveness abit wonky here -->
 <div class="pt-5 container-fluid">
-    <div class="row h-100 align-items-center bg-uog">
+    <div class="row h-100 align-items-center bg-uog-light">
         <div class="welcome-text col-md-5 col-xs-12">
             <div class="d-inline-flex white">
                 <h1>
